2003-09-28  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/cmdline.py (QMTest.summary_formats): Rearrange order.
	(QMTest.commands_spec): Automatically generate lists of --format
	options.
	* qm/test/classes/text_result_stream.py
	(TextResultStream.arguments): Specify valid enumerals for format.

	* qm/test/cmdline.py (commands_spec): Add --help support for
	"qmtest remote".

2003-09-26  Mark Mitchell  <mark@codesourcery.com>

	* qm/executable.py (Executable.Kill): Fix typo.

2003-09-25  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/command.py (ExecTestBase.arguments): Improve
	documentation for exit_code.
	* qm/test/doc/tour.xml: Remove discussion of carriage-returns in
	execution tests.
	
	* qm/executable.py (Executable.Kill): New method.
	(Executable._GetChildPID): Improve documentation.
	(TimeoutExecutable): Update documentation about timeouts on
	Windows.
	(TimeoutExecutable.__init__): Do not ignore timeouts on Windows.
	(TimeoutExecutable._HandleChild): Create a monitoring thread on
	Windows.
	(TimeoutExecutable.Run): Wiat for the monitoring thread to exit.
	(TimeoutExecutable.__Monitor): New method.

2003-09-21  Mark Mitchell  <mark@codesourcery.com>

	* qm/xmlutil.py (get_children): Remove.
	(get_child_texts): Don't use it.
	* qm/test/base.py (get_extension_class_names_in_directory):
	Support new class directory format.
	* qm/test/cmdline.py (QMTest.__ExecuteRegister): Generate the
	class directory using the new directory format.
	* qm/test/database.py (load_database): Do not use get_children.
	* qm/test/result.py (Result.MakeDomNode): Revise result format.
	(__all__): New variable.
	* qm/test/classes.qmc: Regenerated.
	* qm/test/classes/xml_result_stream.py
	(XMLResultStream.WriteAnnotation): Use indentation when writing
	out results.
	(XMLResultStream.WriteResult): Likewise.
	(XMLResultReader._get_result_from_dom): Rename to ...
	(XMLResultReader._GetResultFromDomNode): ... this.  Support old
	and new formats.